--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   google_fonts: ^6.1.0
   equatable: ^2.0.5
   flutter_conditional_rendering: ^2.0.0
+  firebase_auth: ^4.17.4
+  firebase_core: ^2.25.4
+  firebase_messaging: ^14.7.15
+  cloud_firestore: ^4.15.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -69,8 +73,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -81,10 +85,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Janna
+      fonts:
+        - asset: assets/fonts/Bahij-Janna-Regular.ttf
+          style: italic
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
