--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,9 @@ flutter:
       fonts:
         - asset: assets/fonts/Bahij-Janna-Regular.ttf
           style: italic
+    - family: MaterialDesignIconsDesktop
+      fonts:
+        - asset: assets/fonts/MaterialDesignIconsDesktop.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
